--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Dashboard</title>
+    <title>Web Secure Coding Dojang</title>
 
     <!-- Bootstrap core CSS-->
     <link href="{{ url_for('static', filename = 'vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -116,28 +116,41 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-fw fa-folder"></i>
-            <span>Extra</span>
+            <span>Other Case</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-            <h6 class="dropdown-header">Other Pages:</h6>
-            <a class="dropdown-item" href="/error">Error Page</a>
+            <h6 class="dropdown-header">Demo Pages:</h6>
+            <a class="dropdown-item small" href="/other/bypass_field">Bypass Field</a>
+            <div class="dropdown-divider"></div>
+            <h6 class="dropdown-header">Sample Pages:</h6>
+            <a class="dropdown-item small" href="/other/error">Error Page</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/charts">
+          <a class="nav-link" href="/other/charts">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Charts</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/noticeboard_list">
+          <a class="nav-link" href="/other/noticeboard_list">
             <i class="fas fa-fw fa-table"></i>
             <span>Notice Border</span></a>
         </li>
       </ul>
 
+      <div id="content-wrapper">
       {% block body %}
-
       {% endblock %}
+      </div>
+      
+      <!-- Sticky Footer -->
+      <footer class="sticky-footer">
+        <div class="container my-auto">
+          <div class="copyright text-center my-auto">
+            <span>Copyright © Realstudy.Net. Since 1999.</span>
+          </div>
+        </div>
+      </footer>
 
     </div>
     <!-- /#wrapper -->
