--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,16 +5,16 @@
 	<div class="card card-login mx-auto mt-5">
 		<div class="card-header">Login</div>
 		<div class="card-body">
-			<form>
+			<form action="/login_do" method="POST">
 				<div class="form-group">
 					<div class="form-label-group">
-						<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
-						<label for="inputEmail">Email address</label>
+						<input type="text" id="inputUsername" name="inputUsername" class="form-control" placeholder="User name" required="required" autofocus="autofocus">
+						<label for="inputUsername">User name for login</label>
 					</div>
 				</div>
 				<div class="form-group">
 					<div class="form-label-group">
-						<input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
+						<input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required="required">
 						<label for="inputPassword">Password</label>
 					</div>
 				</div>
@@ -26,7 +26,7 @@
 						</label>
 					</div>
 				</div>
-				<a class="btn btn-primary btn-block" href="index.html">Login</a>
+				<button type="submit" class="btn btn-primary btn-block">Login</button>
 			</form>
 			<div class="text-center">
 				<a class="d-block small mt-3" href="/register">Register an Account</a>
