--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -5,18 +5,40 @@
   <div class="card card-register mx-auto mt-5">
     <div class="card-header">Register an Account</div>
     <div class="card-body">
-      <form>
+      <form action="/register_do_add" method="POST">
+        <div class="form-group">
+          <div class="form-label-group">
+            <input type="text" id="inputUsername" name="inputUsername" class="form-control" placeholder="User name" required="required">
+            <label for="inputUsername">User name for login</label>
+          </div>
+        </div>
         <div class="form-group">
           <div class="form-row">
             <div class="col-md-6">
               <div class="form-label-group">
-                <input type="text" id="firstName" class="form-control" placeholder="First name" required="required" autofocus="autofocus">
+                <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required="required">
+                <label for="inputPassword">Password</label>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-label-group">
+                <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="Confirm password" required="required">
+                <label for="confirmPassword">Confirm password</label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="form-row">
+            <div class="col-md-6">
+              <div class="form-label-group">
+                <input type="text" id="firstName" name="firstName" class="form-control" placeholder="First name" required="required" autofocus="autofocus">
                 <label for="firstName">First name</label>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-label-group">
-                <input type="text" id="lastName" class="form-control" placeholder="Last name" required="required">
+                <input type="text" id="lastName" name="lastName" class="form-control" placeholder="Last name" required="required">
                 <label for="lastName">Last name</label>
               </div>
             </div>
@@ -24,27 +46,11 @@
         </div>
         <div class="form-group">
           <div class="form-label-group">
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required">
+            <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email address" required="required">
             <label for="inputEmail">Email address</label>
           </div>
         </div>
-        <div class="form-group">
-          <div class="form-row">
-            <div class="col-md-6">
-              <div class="form-label-group">
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
-                <label for="inputPassword">Password</label>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-label-group">
-                <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm password" required="required">
-                <label for="confirmPassword">Confirm password</label>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a class="btn btn-primary btn-block" href="login.html">Register</a>
+        <button type="submit" class="btn btn-primary btn-block">Register</button>
       </form>
       <div class="text-center">
         <a class="d-block small mt-3" href="/login">Login Page</a>
