--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -95,10 +95,6 @@
             <h6 class="dropdown-header">Login Screens:</h6>
             <a class="dropdown-item" href="/login">Login</a>
             <a class="dropdown-item" href="/register">Register</a>
-            <a class="dropdown-item" href="/forgot-password">Forgot Password</a>
-            <div class="dropdown-divider"></div>
-            <h6 class="dropdown-header">Direct URL:</h6>
-            <a class="dropdown-item" href="/error">Error Page</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -109,6 +105,9 @@
           <div class="dropdown-menu" aria-labelledby="pagesDropdown">
             <h6 class="dropdown-header">Member Pages:</h6>
             <a class="dropdown-item small" href="/authorization/myinfo">My Info</a>
+            <div class="dropdown-divider"></div>
+            <h6 class="dropdown-header">Direct URL:</h6>
+            <a class="dropdown-item" href="/error">Member List</a>
           </div>
         </li>
         <li class="nav-item dropdown">
